welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur ) {
  ^SnakeBuggle:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^